# pcalc

./: CMakeLists.txt  Makefile  README.md  calc  cli.cpp  laws.cpp  laws.hpp  main.cpp  solver.cpp  solver.hpp
